config: atualizar SecurityConfig com JWT stateless e SwaggerConfig